--- a/linear_algebra/notebook/numpy_intro.ipynb
+++ b/linear_algebra/notebook/numpy_intro.ipynb
@@ -286,12 +286,12 @@
     "id": "ttc-G2m9mIZM"
    },
    "source": [
-    "Let's reshape `a` as `[16,1]`, `[1,16]`, `[4,4]`, `[2,2,4]`. To minimize the repeatition of code, let us build a reusable function for reshaping tensors and use it to reshape our `"
+    "Let's reshape `a` as `[16,1]`, `[1,16]`, `[4,4]`, `[2,2,4]`. To minimize the repeatition of code, let us build a reusable function for reshaping tensors and use it to reshape our `(16,)` tensor into the target shape."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -306,35 +306,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1]\n",
-      " [ 1]\n",
-      " [ 3]\n",
-      " [ 0]\n",
-      " [ 4]\n",
-      " [-7]\n",
-      " [-3]\n",
-      " [ 7]\n",
-      " [ 2]\n",
-      " [ 2]\n",
-      " [ 7]\n",
-      " [ 7]\n",
-      " [ 3]\n",
-      " [ 2]\n",
-      " [ 6]\n",
-      " [ 6]]\n",
+      "[[  2]\n",
+      " [  6]\n",
+      " [ -5]\n",
+      " [ -9]\n",
+      " [ -8]\n",
+      " [  3]\n",
+      " [ -1]\n",
+      " [ -1]\n",
+      " [  2]\n",
+      " [  5]\n",
+      " [-10]\n",
+      " [  8]\n",
+      " [ -9]\n",
+      " [ -8]\n",
+      " [ -5]\n",
+      " [ -9]]\n",
       "(16, 1)\n",
-      "[[-1  1  3  0  4 -7 -3  7  2  2  7  7  3  2  6  6]]\n",
+      "[[  2   6  -5  -9  -8   3  -1  -1   2   5 -10   8  -9  -8  -5  -9]]\n",
       "(1, 16)\n",
-      "[[-1  1  3  0]\n",
-      " [ 4 -7 -3  7]\n",
-      " [ 2  2  7  7]\n",
-      " [ 3  2  6  6]]\n",
+      "[[  2   6  -5  -9]\n",
+      " [ -8   3  -1  -1]\n",
+      " [  2   5 -10   8]\n",
+      " [ -9  -8  -5  -9]]\n",
       "(4, 4)\n",
-      "[[[-1  1  3  0]\n",
-      "  [ 4 -7 -3  7]]\n",
+      "[[[  2   6  -5  -9]\n",
+      "  [ -8   3  -1  -1]]\n",
       "\n",
-      " [[ 2  2  7  7]\n",
-      "  [ 3  2  6  6]]]\n",
+      " [[  2   5 -10   8]\n",
+      "  [ -9  -8  -5  -9]]]\n",
       "(2, 2, 4)\n"
      ]
     }
