--- a/linear_algebra/notebook/numpy_intro.ipynb
+++ b/linear_algebra/notebook/numpy_intro.ipynb
@@ -10,13 +10,13 @@
     "# Introducing `numpy` (Numerical Python)\n",
     "`numpy` or simply `np` is a popular machine learning library in Python. Almost all linear algebra data, operations, and algorithms can be programmed with the help of `np`.\n",
     "\n",
-    "### Tensor\n",
+    "## Tensors\n",
     "A tensor is instantiated using `array()` method of `numpy`. In particular, we can create a column vector by supplying its elements:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -90,7 +90,7 @@
    "metadata": {},
    "source": [
     "However, computers see both of them as simply sequence of data. Loosely, both can be interpreted as vectors. We can always reshape a tensor from one dimension into another. Before discussing the `reshape` method, let us digress and discuss list and tuple.\n",
-    "### List and Tuple"
+    "## List and Tuple"
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -175,7 +175,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-8c36aca4effd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# this is an error since a tuple can not be changed after initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-49-8c36aca4effd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# this is an error since a tuple can not be changed after initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -191,12 +191,40 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`np` accepts both list and tuple as arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1 -1]\n",
+      "[ 1 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list to np tensor\n",
+    "print(np.array([1,-1]))\n",
+    "# tuple to np tensor\n",
+    "print(np.array((1,-1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "z8FCWlDNtpdP"
    },
    "source": [
-    "### Tensor Shapes"
+    "## Tensor Shape"
    ]
   },
   {
@@ -211,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -248,12 +276,12 @@
    },
    "source": [
     "The use of `-1` value means let `np` figure out the other dimension given that the last dimension must be `1`.\n",
-    "Let us generate a tensor with `16` random elements: "
+    "Let us generate a tensor with `16` random integers from `-10` to `10`: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -268,7 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  2   6  -5  -9  -8   3  -1  -1   2   5 -10   8  -9  -8  -5  -9]\n",
+      "[  4   9  -3  -9   2  -7  -7   2   1  -4   6  -7  -8  -3 -10   1]\n",
       "(16,)\n"
      ]
     }
@@ -291,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -306,35 +334,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  2]\n",
-      " [  6]\n",
-      " [ -5]\n",
+      "[[  4]\n",
+      " [  9]\n",
+      " [ -3]\n",
       " [ -9]\n",
-      " [ -8]\n",
-      " [  3]\n",
-      " [ -1]\n",
-      " [ -1]\n",
       " [  2]\n",
-      " [  5]\n",
-      " [-10]\n",
-      " [  8]\n",
-      " [ -9]\n",
+      " [ -7]\n",
+      " [ -7]\n",
+      " [  2]\n",
+      " [  1]\n",
+      " [ -4]\n",
+      " [  6]\n",
+      " [ -7]\n",
       " [ -8]\n",
-      " [ -5]\n",
-      " [ -9]]\n",
+      " [ -3]\n",
+      " [-10]\n",
+      " [  1]]\n",
       "(16, 1)\n",
-      "[[  2   6  -5  -9  -8   3  -1  -1   2   5 -10   8  -9  -8  -5  -9]]\n",
+      "[[  4   9  -3  -9   2  -7  -7   2   1  -4   6  -7  -8  -3 -10   1]]\n",
       "(1, 16)\n",
-      "[[  2   6  -5  -9]\n",
-      " [ -8   3  -1  -1]\n",
-      " [  2   5 -10   8]\n",
-      " [ -9  -8  -5  -9]]\n",
+      "[[  4   9  -3  -9]\n",
+      " [  2  -7  -7   2]\n",
+      " [  1  -4   6  -7]\n",
+      " [ -8  -3 -10   1]]\n",
       "(4, 4)\n",
-      "[[[  2   6  -5  -9]\n",
-      "  [ -8   3  -1  -1]]\n",
+      "[[[  4   9  -3  -9]\n",
+      "  [  2  -7  -7   2]]\n",
       "\n",
-      " [[  2   5 -10   8]\n",
-      "  [ -9  -8  -5  -9]]]\n",
+      " [[  1  -4   6  -7]\n",
+      "  [ -8  -3 -10   1]]]\n",
       "(2, 2, 4)\n"
      ]
     }
@@ -358,7 +386,9 @@
     "id": "l31CSeH11ObW"
    },
    "source": [
-    "## Operations: `numpy` supports various tensor operations"
+    "## Tensor Operations\n",
+    "\n",
+    "`numpy` supports various tensor operations."
    ]
   },
   {
@@ -373,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -388,14 +418,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-3  2]\n",
-      " [-3 -4]] : a\n",
-      "[[ 0  2]\n",
-      " [-3 -1]] : b\n",
-      "[[-3  4]\n",
-      " [-6 -5]] : a+b\n",
-      "[[-3  4]\n",
-      " [-6 -5]] : a+b\n"
+      "[[-3  0]\n",
+      " [-4 -4]] : a\n",
+      "[[ 1 -2]\n",
+      " [ 3 -4]] : b\n",
+      "[[-2 -2]\n",
+      " [-1 -8]] : a+b\n",
+      "[[-2 -2]\n",
+      " [-1 -8]] : a+b\n"
      ]
     }
    ],
@@ -422,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -437,22 +467,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4 -2]\n",
-      " [ 2 -4]] : a\n",
-      "[[-1  3]\n",
-      " [ 1 -1]] :b \n",
-      "[[-3 -5]\n",
-      " [ 1 -3]] : a-b\n",
-      "a-b:  [[-3 -5]\n",
-      " [ 1 -3]]\n",
-      "[[ 4 -6]\n",
-      " [ 2  4]] : a*b\n",
-      "[[ 4 -6]\n",
-      " [ 2  4]] : a*b\n",
-      "[[ 4.         -0.66666667]\n",
-      " [ 2.          4.        ]] : a/b\n",
-      "[[ 4.         -0.66666667]\n",
-      " [ 2.          4.        ]] : a/b\n"
+      "[[-4 -4]\n",
+      " [-2 -4]] : a\n",
+      "[[ 3 -3]\n",
+      " [ 3  1]] : b\n",
+      "[[-7 -1]\n",
+      " [-5 -5]] : a-b\n",
+      "[[-7 -1]\n",
+      " [-5 -5]] : a-b\n",
+      "[[-12  12]\n",
+      " [ -6  -4]] : a*b\n",
+      "[[-12  12]\n",
+      " [ -6  -4]] : a*b\n",
+      "[[-1.33333333  1.33333333]\n",
+      " [-0.66666667 -4.        ]] : a/b\n",
+      "[[-1.33333333  1.33333333]\n",
+      " [-0.66666667 -4.        ]] : a/b\n"
      ]
     }
    ],
@@ -464,17 +494,19 @@
     "# using - operator\n",
     "print(a-b, \": a-b\")\n",
     "# alternatively using subtract() method\n",
-    "print(\"a-b: \", np.subtract(a,b))\n",
+    "print(np.subtract(a,b), \": a-b\")\n",
     "\n",
     "# using * operator\n",
     "print(a*b, \": a*b\")\n",
     "# alternatively using multiply() method\n",
     "print(np.multiply(a,b), \": a*b\")\n",
     "\n",
-    "# using / operator (may encounter divide by zero error)\n",
-    "print(a/b, \": a/b\")\n",
-    "# alternatively using dividde() method\n",
-    "print(np.divide(a,b), \": a/b\")"
+    "if b.all():\n",
+    "    print(a/b, \": a/b\")\n",
+    "    # alternatively using divide() method\n",
+    "    print(np.divide(a,b), \": a/b\")\n",
+    "else:\n",
+    "    print(\"Divide by zero is not defined.\")"
    ]
   },
   {
@@ -489,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -504,8 +536,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  2 -10]\n",
-      " [ -6  10]] : a matmul b\n"
+      "[[-24   8]\n",
+      " [-18   2]] : a matmul b\n"
      ]
     }
    ],
@@ -520,13 +552,13 @@
     "id": "AG4ahadyNGqR"
    },
    "source": [
-    "## Vector operation\n",
-    "For example, dot product:"
+    "## Vector Operation\n",
+    "In machine learning, dot product is a common vector operation. For example, it is used to the measure similarity between 2 vectors. In `np`, we use `dot()` method to execute a dot product."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -580,12 +612,12 @@
     "id": "O-2uWrhWA3L-"
    },
    "source": [
-    "For convenience, we have used `int` elements. In ML, tensors are generally floating point datatypes. Here are some examples of tensors of the same numerical value but with different precision:"
+    "For convenience, we have used `int` elements. In machine learning, tensors are generally floating point datatypes. Exceptions are in quantized models used in resource constrained computers. Here are some examples of tensors of the same numerical value but with different precision:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -614,7 +646,6 @@
     "print(a, \" :a\")\n",
     "print(\"a.dtype\", a.dtype)\n",
     "\n",
-    "\n",
     "b = np.array([1, 2], np.float32)\n",
     "print(b, \" :b\")\n",
     "print(\"b.dtype\", b.dtype)\n",
@@ -634,12 +665,12 @@
    "source": [
     "## Special Tensors\n",
     "`np` has methods to instantiate special tensors\n",
-    "For example, tensor of ones and zeroes:"
+    "For example, tensor of ones and zeros:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -682,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -720,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -745,6 +776,88 @@
     "# 3 x 3 identity matrix\n",
     "print(np.identity(3))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Axis\n",
+    "Every tensor has dimensions. As such, `np` supports operations with respect to a specific dimension. \n",
+    "For example, given a `4x5` tensor with random integer elements, let us compute the `sum` per row (ie along `axis=1`) or per column (ie along `axis=0`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 -3  2 -1  2]\n",
+      " [ 0  0 -2  1 -2]\n",
+      " [-2 -1  1 -2 -3]\n",
+      " [ 1  2 -1  0  0]]\n",
+      "[ 1 -3 -7  2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(-3,3,(4,5))\n",
+    "print(a)\n",
+    "row_max = np.sum(a, axis=1)\n",
+    "print(row_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 -2  0 -2 -3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "row_col = np.sum(a, axis=0)\n",
+    "print(row_col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also get the sum o all elemennts:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
