--- a/linear_algebra/notebook/numpy_intro.ipynb
+++ b/linear_algebra/notebook/numpy_intro.ipynb
@@ -597,6 +597,110 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other Tensor Operations\n",
+    "Transpose, trace, diagonal elements, inverse (if square and non-singular).\n",
+    "Transpose:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2 -3 -1 -1]\n",
+      " [-2 -2  2  2]\n",
+      " [-3  1  0 -2]\n",
+      " [ 2  1 -1 -3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(-3,3,(4,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2 -2 -3  2]\n",
+      " [-3 -2  1  1]\n",
+      " [-1  2  0 -1]\n",
+      " [-1  2 -2 -3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.trace(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2 -2  0 -3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.diagonal(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.05263158  0.07894737 -0.21052632  0.21052632]\n",
+      " [-0.21052632 -0.18421053  0.15789474 -0.15789474]\n",
+      " [-0.23684211  0.60526316  0.05263158  0.44736842]\n",
+      " [-0.02631579 -0.21052632 -0.10526316 -0.39473684]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.linalg.inv(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "l-f_kdewLrO0"
@@ -850,6 +954,135 @@
    ],
    "source": [
     "print(np.sum(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other Common Functions\n",
+    "Maximum element in a tensor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -5  -5   0   2  -7]\n",
+      " [ -9 -10  -1  -5   5]\n",
+      " [ -8   5  -2   8   0]\n",
+      " [ -8   1  -1  -2  -2]]\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(-10,10,(4,5))\n",
+    "print(a)\n",
+    "print(np.amax(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Minimum element in a tensor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.amin(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Absolute value, squared, etc:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  5  0  2  7]\n",
+      " [ 9 10  1  5  5]\n",
+      " [ 8  5  2  8  0]\n",
+      " [ 8  1  1  2  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.abs(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 25  25   0   4  49]\n",
+      " [ 81 100   1  25  25]\n",
+      " [ 64  25   4  64   0]\n",
+      " [ 64   1   1   4   4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Square root of absolute value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.23606798 2.23606798 0.         1.41421356 2.64575131]\n",
+      " [3.         3.16227766 1.         2.23606798 2.23606798]\n",
+      " [2.82842712 2.23606798 1.41421356 2.82842712 0.        ]\n",
+      " [2.82842712 1.         1.         1.41421356 1.41421356]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sqrt(np.abs(a)))"
    ]
   },
   {
