--- a/linear_algebra/notebook/linear_regression.ipynb
+++ b/linear_algebra/notebook/linear_regression.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 156,
    "metadata": {
     "scrolled": true
    },
@@ -683,12 +683,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Linear Regression Using `sklearn.linear_model.LinearRegression`"
+    "### Linear Regression Using `sklearn.linear_model.LinearRegression`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
        "0.8861940780217027"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "0.868175950058243"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,13 +812,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validation on Test Split\n",
+    "#### Validation on Test Split\n",
     "The *real* validation happens on the test split. Most of the time, this score is the one that is reported."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -975,12 +975,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear Regression using Moore-Penrose Pseudo Inverse"
+    "### Linear Regression using Moore-Penrose Pseudo Inverse\n",
+    "Linear Regression using this requires us to solve: \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\mathbf{x} = (A^TA)^{-1}A^T\\mathbf{b}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "In this case: `A = X_train` and `b = y_train`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -992,14 +999,13 @@
     }
    ],
    "source": [
-    "# X = np.matmul(np.linalg.inv(np.matmul(X_train.T,X_train)),X_trai\n",
     "Xt = np.array(X_train.T)\n",
     "print(Xt.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1016,8 +1022,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us compute the inverse"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,16 +1039,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "X = np.linalg.inv(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1068,7 @@
        "       -10.2262983 ])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1128,7 @@
        "0.6764215806603961"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1148,7 @@
        "0.6243923434211206"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
